--- a/.github/actions/ph-web-deploy-stop-start-apppool/action.yml
+++ b/.github/actions/ph-web-deploy-stop-start-apppool/action.yml
@@ -1,5 +1,5 @@
-name: "Ph Web Deploy"
-description: "Deploy projects directly to IIS"
+name: "Ph Web Deploy (Stop Start AppPool)"
+description: "Deploy projects directly to IIS (Stop / Start Application Pool)"
 inputs:
   website-name:
     description: "IIS website name"
@@ -28,6 +28,15 @@ inputs:
 runs:
   using: "composite"
   steps:
+    - name: Stop Application Pool
+      shell: pwsh
+      run: >
+        ${{ github.action_path }}/Scripts/Set-ApplicationPool.ps1
+        -recycleMode StopAppPool
+        -recycleApp ${{ inputs.website-name }}
+        -computerName ${{ inputs.server-computer-name }}
+        -username ${{ inputs.server-username }}
+        -password ${{ inputs.server-password }}
     - name: Deploy Application
       shell: pwsh
       run: >
@@ -39,6 +48,15 @@ runs:
         -password ${{ inputs.server-password }}
         -paramFile ${{ inputs.source-paramFile }}
         -fileName ${{ inputs.source-fileName }}
+    - name: Start Application Pool
+      shell: pwsh
+      run: >
+        ${{ github.action_path }}/Scripts/Set-ApplicationPool.ps1
+        -recycleMode StartAppPool
+        -recycleApp ${{ inputs.website-name }}
+        -computerName ${{ inputs.server-computer-name }}
+        -username ${{ inputs.server-username }}
+        -password ${{ inputs.server-password }}
 branding:
   icon: "upload-cloud"
   color: "purple"
