Changed to use local github-tagger

--- a/.github/workflows/build-V8.yml
+++ b/.github/workflows/build-V8.yml
@@ -79,7 +79,7 @@ jobs:
             source-paramFile: 'Umbraco.Web.SetParameters.xml'
             
         - name: Tag Build
-          uses: tvdias/github-tagger@v0.0.2
+          uses: PhCreative/.github/.github/actions/github-tagger@master
           with:
             repo-token: ${{ secrets.GITHUB_TOKEN }}
             tag: UATBuild-${{ steps.date.outputs.year }}${{ steps.date.outputs.month }}${{ steps.date.outputs.day }}-${{ inputs.run_number }}
