--- a/.github/actions/ph-web-deploy-test/action.yml
+++ b/.github/actions/ph-web-deploy-test/action.yml
@@ -25,6 +25,10 @@ inputs:
     description: "The name of the file to be deployed"
     required: true
     default: 'Umbraco.Web.zip'
+  source-configuration:
+    description: "The build configuration"
+    required: true
+    default: '""'
 runs:
   using: "composite"
   steps:
