--- a/.github/workflows/build-V10-test.yml
+++ b/.github/workflows/build-V10-test.yml
@@ -46,7 +46,7 @@ jobs:
       
         - name: Build Solution
           run: | 
-            dotnet build Ph.JobBoard-v10.sln --no-self-contained /nologo /nr:false /p:DeleteExistingFiles=False /p:SkipInvalidConfigurations=true /p:IncludeSetAclProviderOnDestination=False /p:AutoParameterizationWebConfigConnectionStrings=False /p:platform="Any CPU" /p:configuration="UAT"
+            dotnet build Ph.JobBoard-v10.sln --no-self-contained /nologo /nr:false /p:DeleteExistingFiles=False /p:SkipInvalidConfigurations=true /p:IncludeSetAclProviderOnDestination=False /p:AutoParameterizationWebConfigConnectionStrings=False /p:platform="Any CPU" /p:configuration="${{env.BuildConfiguration}}"
         
         - name: Deploy to Server
           uses: PhCreative/.github/.github/actions/ph-web-deploy-test@master
@@ -57,6 +57,7 @@ jobs:
             server-password: ${{ secrets.password }}
             source-path: 'Ph.Umbraco.Web'
             source-fileName: 'Ph.Umbraco.Web.zip'
+            source-configuration: ${{env.BuildConfiguration}}
             
         - name: Tag Build
           uses: tvdias/github-tagger@v0.0.2
