--- a/.github/workflows/build-V10-test.yml
+++ b/.github/workflows/build-V10-test.yml
@@ -44,9 +44,12 @@ jobs:
         - name: Checkout
           uses: actions/checkout@v3
       
+        - name: Create Build Directory
+          run: mkdir _build
+      
         - name: Build Solution
           run: | 
-            dotnet build Ph.JobBoard-v10.sln --no-self-contained /nologo /nr:false /p:DeleteExistingFiles=False /p:SkipInvalidConfigurations=true /p:IncludeSetAclProviderOnDestination=False /p:AutoParameterizationWebConfigConnectionStrings=False /p:platform="Any CPU" /p:configuration="${{env.BuildConfiguration}}"
+            dotnet build ${{env.SolutionName}} /nologo /nr:false /p:DeployOnBuild=true /p:DeployDefaultTarget=WebPublish /p:WebPublishMethod=Package /p:PackageAsSingleFile=true /p:DeleteExistingFiles=True /p:SkipInvalidConfigurations=true /p:IncludeSetAclProviderOnDestination=False /p:AutoParameterizationWebConfigConnectionStrings=False /p:platform="${{env.BuildPlatform}}" /p:configuration="${{env.BuildConfiguration}}" /p:PackageLocation="../_build"
         
         - name: Deploy to Server
           uses: PhCreative/.github/.github/actions/ph-web-deploy-test@master
@@ -57,7 +60,6 @@ jobs:
             server-password: ${{ secrets.password }}
             source-path: 'Ph.Umbraco.Web'
             source-fileName: 'Ph.Umbraco.Web.zip'
-            source-configuration: '${{ inputs.build_configuration }}'
             
         - name: Tag Build
           uses: tvdias/github-tagger@v0.0.2
