--- a/.github/workflows/build-V10.yml
+++ b/.github/workflows/build-V10.yml
@@ -12,6 +12,9 @@ on:
       build_configuration:
         required: true
         type: string
+      environment_name:
+        required: true
+        type: string
     secrets:
       solution_name:
         required: true
