--- a/.github/workflows/build-V10.yml
+++ b/.github/workflows/build-V10.yml
@@ -51,6 +51,12 @@ jobs:
         - name: Create Build Directory
           run: mkdir _build
       
+        - uses: microsoft/variable-substitution@v1 
+          with:
+            files: 'Ph.Umbraco.Web/appsettings.Production.json'
+          env:
+            Umbraco.CMS.RuntimeMinification.Version: ${{ inputs.run_id }}
+      
         - name: Build Solution
           run: | 
             dotnet build ${{env.SolutionName}} /nologo /nr:false /p:DeployOnBuild=true /p:DeployDefaultTarget=WebPublish /p:WebPublishMethod=Package /p:PackageAsSingleFile=true /p:DeleteExistingFiles=True /p:SkipInvalidConfigurations=true /p:IncludeSetAclProviderOnDestination=False /p:AutoParameterizationWebConfigConnectionStrings=False /p:platform="${{env.BuildPlatform}}" /p:configuration="${{env.BuildConfiguration}}" /p:PackageLocation="../_build" /p:EnvironmentName=${{env.EnvironmentName}} --no-self-contained -p:MyRuntimeIdentifier=win-x64
