--- a/.github/workflows/build-V8.yml
+++ b/.github/workflows/build-V8.yml
@@ -32,7 +32,7 @@ env:
 jobs:
   run-forest-run:
   
-    runs-on: self-hosted
+    runs-on: windows-latest
     
     steps:
         - name: Checkout
