Ph.Umbraco.Web.SetParameters.xml

--- a/.github/workflows/build-V10-KeyVault.yml
+++ b/.github/workflows/build-V10-KeyVault.yml
@@ -64,7 +64,7 @@ jobs:
 
         - uses: cschleiden/replace-tokens@v1
           with:
-            files: '["_build/Umbraco.Web.SetParameters.xml"]'
+            files: '["_build/Ph.Umbraco.Web.SetParameters.xml"]'
           env:
             UpdateAzureTenantId: 'test'
 
