Removed double .config

--- a/.github/workflows/build-V10-KeyVault.yml
+++ b/.github/workflows/build-V10-KeyVault.yml
@@ -60,7 +60,7 @@ jobs:
       
         - uses: cschleiden/replace-tokens@v1
           with:
-            files: '["Ph.Umbraco.Web/web.config.config"]'
+            files: '["Ph.Umbraco.Web/web.config"]'
           env:
             UpdateAzureTenantId: 'test'
 
